log in and log out functionality set up

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
             {{{ body }}}
         </main>
         <footer>
-            Thanks for visiting!
+            Blog with me if you want to live
         </footer>
     </div>
 
