--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,11 +126,10 @@
   }
   
   .post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: #7d7d7d;
+    font-size: larger;
   }
   
+
   .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
