--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,13 +77,13 @@
     flex-direction: column;
   }
   
-  header {
+  /* header {
     border-bottom: 1px solid #ccc;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 1%;
-  }
+  } */
   
   header h1 {
     font-size: 1em;
