--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,21 +1,38 @@
 <article>
     <a href="/dashboard"> &larr; Back to dashboard</a>
-    <h2>
-        Edit Post
-    </h2>
-    <form class="edit-post-form">
-        <div>
-            <input name="post-title" type="text" value="{{post.title}}" /> </br>
-            <input name="post-content" type="text" value="{{post.post_content}}"/>
+    <div class="card">
+        <div class="card-header">
+            Edit Post
         </div>
-        <div>
-            by you on {{format_date post.created_at}}
-            |
-            <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+        <div class="card-body">
+            <form class="edit-post-form">
+                <div class="form-group">
+                    <label>
+                        <h3>
+                            Post Title
+                        </h3>
+                    </label>
+                    <input name="post-title" type="text" value="{{post.title}}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>
+                        <h3>
+                            Post Content
+                        </h3>
+                    </label>
+                    <input name="post-content" type="text" value="{{post.post_content}}" class="form-control">
+                </div>
+                <button type="submit">Save post</button>
+                <button type="button" class="delete-post-btn">Delete post</button>
+            </form>
         </div>
-        <button type="submit">Save post</button>
-        <button type="button" class="delete-post-btn">Delete post</button>
-    </form>
+    </div>
+
+    <div>
+        by you on {{format_date post.created_at}}
+        |
+        <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+    </div>
 </article>
 
 <form class="comment-form">
