--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,11 +1,14 @@
-<article class="post">
-  <div class="title">
+<div class="card">
+  <div class="card-header">
     <h2>{{title}}</h2>
-    <span class="content">{{post_content}}</span>
-  </div>
-  <div class="meta">
+    </div>
+    <div class="card-body">
+      <p class="card-text">{{post_content}}</p>
+    </div>
+  
+  <div class="card-footer text-muted">
     by {{user.username}} on {{format_date created_at}}
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
-</article>
+</div>
